# Locus

./: Cargo.toml  README.md
examples/: commom.rs  common.rs  dispersion.rs  kmeans.rs  text_showcase.rs
src/: colorscheme.rs  dataset.rs  graph.rs  kmeans.rs  lib.rs  main.rs  plotter.rs
src/plottable/: annotation.rs  legend.rs  line.rs  mod.rs  point.rs  scatter.rs  text.rs  ticks.rs  view.rs
