[package]
name = "locus"
version = "0.2.0"
edition = "2024"
authors = ["Marco Túlio <marcotulio270903@gmail.com>"]
description = "A small raylib based graphing library."
readme = "README.md"
repository = "https://github.com/Marco-Normal/Locus"
license = "GPL-3.0"

[dependencies]
derive_builder = "0.20.2"
raylib = "5.5.1"
[dev-dependencies]
rand = "0.9.2"
